# dukcpp

./: CMakeLists.txt  README.md
cmake/: config.cmake.in  duktape.cmake
duk/: CMakeLists.txt  debugger.cpp  debugger.h  main.cpp  options.cpp  options.h
include/duk/: allocator.h  allocator_adapter.h  callable.h  callable_std_function.h  class.h  common.h  context.h  duk.h  enum_helpers.h  error.h  function.h  function_handle.h  function_helpers.h  fwd.h  handle.h  iterable.h  property_helpers.h  range.h  safe_handle.h  scoped_pop.h  std.h  string_traits.h  type_adapter.h  type_id_static_ptr.h  type_id_typeid.h  type_traits.h  type_traits_helpers.h  value.h
include/duk/detail/: any.h  debug.h  function_wrapper.h  memory_resource.h  std.h  type_traits.h
src/: context.cpp  error.cpp
test/: CMakeLists.txt  any.cpp  character.cpp  character.h  common.cpp  common.h  functor.h  inheritance.cpp  inheritance.h  lifetime.h  test.cpp  vector.cpp  vector.h
test2/: CMakeLists.txt  main.cpp
